# cc-cpp

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
hello/: CMakeLists.txt  main.cc
libarry/: CMakeLists.txt  main.cc  utils.cc  utils.h
src/: cc-md5.cc  cc-md5.h  ccwc-main.cc  ccwc.cc  ccwc.h  main.cc  utils_tests.cc
